IDEX-3081 Manage the autocompletion popup with javadoc

--- a/ide/che-core-ide-jseditor/src/main/resources/org/eclipse/che/ide/jseditor/client/codeassist/AutocompleteComponent.css
+++ b/ide/che-core-ide-jseditor/src/main/resources/org/eclipse/che/ide/jseditor/client/codeassist/AutocompleteComponent.css
@@ -49,6 +49,11 @@
         padding: 0 3px;
     }
 
+    .hintActive {
+        background: #08f;
+        color: white;
+    }
+
     .proposalIcon {
         max-width: 16px;
         flex-shrink: 0;
