--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/Core.css
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/Core.css
@@ -211,7 +211,6 @@ body, td {
     border-bottom: 1px solid textFieldBorderColor;
 }
 
-
 .gwt-TextBox:focus::-webkit-input-placeholder,
 .gwt-TextArea:focus::-webkit-input-placeholder,
 .gwt-SuggestBox:focus::-webkit-input-placeholder,
@@ -424,87 +423,6 @@ a {
 
 .line {
 
-}
-
-/* We tweaked so that the default styles will be
-the inline scroller style. There's a separate "documentScrollable"
-class for the document-level scrollbars. */
-::-webkit-scrollbar {
-    width: scrollbarSize;
-    height: scrollbarSize;
-}
-
-::-webkit-scrollbar-button {
-    height: 0px;
-    width: 0px;
-}
-
-::-webkit-scrollbar-button:start:decrement, ::-webkit-scrollbar-button:end:increment {
-    display: block;
-}
-
-::-webkit-scrollbar-button:vertical:start:increment, ::-webkit-scrollbar-button:vertical:end:decrement {
-    display: none;
-}
-
-::-webkit-scrollbar-track {
-    border-radius: 2px;
-    border: 1px solid scrollbarBorderColor;
-}
-
-::-webkit-scrollbar-track:vertical {
-    border-right: 1px solid transparent;
-    background-clip: padding-box;
-    background-color: transparent;
-}
-
-::-webkit-scrollbar-track:horizontal {
-    border-bottom: 1px solid transparent;
-    background-clip: padding-box;
-    background-color: transparent;
-}
-
-::-webkit-scrollbar-track:hover {
-    background-color: scrollbarHoverBackgroundColor;
-}
-
-::-webkit-scrollbar-track:active {
-    background-color: scrollbarActiveBackgroundColor;
-}
-
-::-webkit-scrollbar-thumb {
-    min-height: 28px;
-    padding-top: 100px;
-    background-clip: padding-box;
-    background-color: rgba(178, 178, 178, 0.2);
-    -webkit-box-shadow: inset 1px 1px 0px rgba(178, 178, 178, 0.10),
-    inset 0px -1px 0px rgba(178, 178, 178, 0.07);
-}
-
-::-webkit-scrollbar-corner {
-    background-color: transparent;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(178, 178, 178, 0.4);
-    -webkit-box-shadow: inset 1px 1px 1px rgba(178, 178, 178, 0.25);
-}
-
-::-webkit-scrollbar-thumb:active {
-    -webkit-box-shadow: inset 1px 1px 3px rgba(178, 178, 178, 0.35);
-    background-color: rgba(178, 178, 178, 0.5);
-}
-
-::-webkit-scrollbar-thumb:vertical {
-    border-right: 1px solid transparent;
-    border-top: 0px solid transparent;
-    border-bottom: 0px solid transparent;
-}
-
-::-webkit-scrollbar-thumb:horizontal {
-    border-left: 0px solid transparent;
-    border-right: 0px solid transparent;
-    border-bottom: 1px solid transparent;
 }
 
 .gwt-PopupPanel {
@@ -777,4 +695,52 @@ class for the document-level scrollbars. */
 
 .tagsPanel {
     width: 393px;
+}
+
+/********************************************************************************************
+ *
+ * Styled scroll bars
+ *
+ ********************************************************************************************/
+
+::-webkit-scrollbar {
+    width: 7px;
+    height: 7px;
+}
+
+::-webkit-scrollbar-button {
+    width: 0px;
+    height: 0px;
+    display: none;
+}
+
+::-webkit-scrollbar-corner {
+    background-color: transparent;
+    display: none;
+}
+
+::-webkit-resizer {
+}
+
+::-webkit-scrollbar-track,
+::-webkit-scrollbar-track:hover,
+::-webkit-scrollbar-track:active {
+    background-color: transparent;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    border: none;
+}
+
+::-webkit-scrollbar-thumb {
+    background-clip: padding-box;
+    background-color: scrollbarBackgroundColor;
+    border: 2px solid transparent;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0px 0px 2px scrollbarBorderColor;
+    box-shadow: inset 0px 0px 2px scrollbarBorderColor;
+    min-height: 32px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: scrollbarHoverBackgroundColor;
 }
