--- a/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/smartTree/TreeStyles.css
+++ b/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/smartTree/TreeStyles.css
@@ -8,6 +8,13 @@
  * Contributors:
  *   Codenvy, S.A. - initial API and implementation
  *******************************************************************************/
+@eval projectExplorerJointContainerFill org.eclipse.che.ide.api.theme.Style.getProjectExplorerJointContainerFill();
+@eval projectExplorerJointContainerShadow org.eclipse.che.ide.api.theme.Style.getProjectExplorerJointContainerShadow();
+@eval projectExplorerPresentableTextShadow org.eclipse.che.ide.api.theme.Style.getProjectExplorerPresentableTextShadow();
+@eval projectExplorerInfoTextShadow org.eclipse.che.ide.api.theme.Style.getProjectExplorerInfoTextShadow();
+@eval projectExplorerSelectedRowBackground org.eclipse.che.ide.api.theme.Style.getProjectExplorerSelectedRowBackground();
+@eval projectExplorerHoverRowBackground org.eclipse.che.ide.api.theme.Style.getProjectExplorerHoverRowBackground();
+
 .noFocusOutline {
     outline: none;
 }
@@ -24,8 +31,8 @@
     width: 16px;
     height: 16px;
     padding-top: 2px;
-    fill: #dbdbdb;
-    -webkit-filter: drop-shadow(1px 1px 0 rgba(0, 0, 0, 0.4));
+    fill: projectExplorerJointContainerFill;
+    -webkit-filter: projectExplorerJointContainerShadow;
 }
 
 .iconContainer {
@@ -38,7 +45,7 @@
     margin-top: -10px;
     font-size: 1em;
     padding-left: 2px;
-    text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.4);
+    text-shadow: projectExplorerPresentableTextShadow;
 }
 
 .infoTextContainer {
@@ -49,7 +56,7 @@
     margin-left: 5px;
     padding-right: 10px;
     font-size: 0.8em;
-    text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.4);
+    text-shadow: projectExplorerInfoTextShadow;
 }
 
 .nodeContainer {
@@ -62,11 +69,11 @@
 }
 
 .selected {
-    background-color: #256c9f;
+    background-color: projectExplorerSelectedRowBackground;
 }
 
 .hover {
-    background-color: #555;
+    background-color: projectExplorerHoverRowBackground;
 }
 
 .joint {
