Add TabLayoutPanel styles.

--- a/ide/che-core-ide-api/src/main/resources/org/eclipse/che/ide/api/ui/style.css
+++ b/ide/che-core-ide-api/src/main/resources/org/eclipse/che/ide/api/ui/style.css
@@ -168,6 +168,7 @@
 @def splitterOverlap 4px;
 @def toolbarIconSize 16px;
 @def menuIconSize 12px;
+@def contentPadding 8px;
 
 /* Font Sizes */
 @def fontSize 11px;
