--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/menu/menu.css
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/menu/menu.css
@@ -66,6 +66,7 @@
 
 .leftPanel {
     float: left;
+    height: inherit;
     white-space: nowrap;
 }
 
@@ -75,6 +76,7 @@
 
 .rightPanel {
     float: right;
+    height: inherit;
     white-space: nowrap;
 }
 
