--- a/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/toolbar/toolbar.css
+++ b/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/toolbar/toolbar.css
@@ -159,7 +159,7 @@
     font-size: 8pt;
     font-weight: normal;
     white-space: nowrap;
-    background: #202020;
+    background: tooltipBackgroundColor;
     font-family: mainFontFamily;
     border-radius: 0;
     -moz-border-radius: 0;
@@ -177,7 +177,7 @@
     height: 0;
     border-width: 9px;
     border-style: solid;
-    border-color: transparent transparent #232323 transparent;
+    border-color: transparent transparent tooltipBackgroundColor transparent;
     top: -16px;
     float:left;
     margin: inherit;
