--- a/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/smartTree/TreeStyles.css
+++ b/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/smartTree/TreeStyles.css
@@ -70,6 +70,11 @@
 
 .selected {
     background-color: projectExplorerSelectedRowBackground;
+    color: projectExplorerJointContainerFill !important;
+}
+
+.selected * {
+    color: projectExplorerJointContainerFill !important;
 }
 
 .hover {
