--- a/commons/che-core-commons-gwt/src/main/resources/org/eclipse/che/ide/ui/loaders/initializationLoader/Loader.css
+++ b/commons/che-core-commons-gwt/src/main/resources/org/eclipse/che/ide/ui/loaders/initializationLoader/Loader.css
@@ -32,7 +32,7 @@
 
 .progressBarErrorStatus {
     background-color: errorColor;
-    height: 3px;
+    height: 2px;
     display: block;
     position: relative;
     left: 0;
@@ -41,7 +41,7 @@
 
 .progressBarInProgressStatus {
     background-color: progressColor;
-    height: 3px;
+    height: 2px;
     display: block;
     position: relative;
     left: 0;
@@ -49,31 +49,61 @@
 }
 
 .iconPanelErrorStatus {
-    color: errorColor;
-    font-size: 21px;
+    line-height: 24px;
+    background-color: iconBackgroundColor;
+}
+
+.iconPanelErrorStatus svg {
+    float: left;
+    height: 12px;
+    width: 12px;
+    padding: 6px 7px 4px 10px;
+    fill: errorColor !important;
+    background-color: inherit;
 }
 
 .errorStatus {
-    color: errorColor;
+    fill: errorColor !important;
+    color: errorColor !important;
 }
 
-.completedStatus {
+.errorStatus svg,
+.errorStatus:hover svg {
+    float: left;
+    height: 12px;
+    width: 12px;
+    padding: 6px 7px 0px 0px;
+    fill: errorColor !important;
+}
+
+.completedStatus > div {
     color: mainFontColor;
 }
 
-.waitStatus {
-    color: disabledColor;
+.completedStatus > svg {
+    float: left;
+    padding: 6px 7px 0px 0px;
 }
 
-.inProgressStatus {
+.waitStatus > div {
+    color: disabledColor;
+    padding: 0px 0px 0px 19px;
+}
+
+.inProgressStatus > div {
     color: progressColor;
+}
+
+.inProgressStatus > svg {
+    float: left;
+    padding: 8px 7px 0px 0px;
 }
 
 .statusPanel {
     margin-top: auto;
     display: inline;
     float: left;
-    width: 65px;
+    width: 61px;
     height: 100%;
     line-height: 24px;
     background-color: iconBackgroundColor;
@@ -81,7 +111,7 @@
 
 .iconPanel {
     float: left;
-    width: 40px;
+    width: 29px;
     height: 100%;
     margin-top: auto;
     line-height: 24px;
@@ -93,7 +123,10 @@
 }
 
 .iconPanel > svg {
-    margin-top: -4px;
+    margin-top: -2px;
+    width: 16px;
+    height: 22px;
+    padding: 3px 0;
 }
 
 .operationPanel {
@@ -107,7 +140,7 @@
 
 .operations {
     position: fixed;
-    min-width: 216px;
+    min-width: 229px;
     text-align: left;
     background-color: operationBoxColor;
     padding-left: 15px;
