--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/notification/notification.css
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/notification/notification.css
@@ -8,132 +8,209 @@
  * Contributors:
  *   Codenvy, S.A. - initial API and implementation
  *******************************************************************************/
-.notificationItem {
-    font-family: mainFontFamily;
-    border-bottom: 1px solid delimeterColor;
-    vertical-align: middle;
-}
-
-.notificationGrid {
-    border-collapse: collapse;
-    width: 100%;
-    height: 100%;
-}
-
-.notificationGrid td {
-    font-size: secondaryTextFontSize !important;
-    text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
-}
-
-.center {
-    display: table;
-    position: absolute;
-}
-
-.center p {
-    display: table-cell;
-    vertical-align: middle;
-}
-
-.notificationItem svg {
-    width: 15px;
-    height: 15px;
-}
-
-.notificationItem a, .notificationPopup a {
-    color: linkColor;
-}
+@eval notificationPopupSuccessBackground org.eclipse.che.ide.api.theme.Style.theme.notificationPopupSuccessBackground();
+@eval notificationPopupFailBackground org.eclipse.che.ide.api.theme.Style.theme.notificationPopupFailBackground();
+@eval notificationPopupProgressBackground org.eclipse.che.ide.api.theme.Style.theme.notificationPopupProgressBackground();
+@eval notificationPopupPanelShadow org.eclipse.che.ide.api.theme.Style.theme.notificationPopupPanelShadow();
+@eval notificationPopupIconSuccessFill org.eclipse.che.ide.api.theme.Style.theme.notificationPopupIconSuccessFill();
+@eval notificationPopupIconFailFill org.eclipse.che.ide.api.theme.Style.theme.notificationPopupIconFailFill();
+@eval notificationPopupIconProgressFill org.eclipse.che.ide.api.theme.Style.theme.notificationPopupIconProgressFill();
 
 .notificationPanel {
     cursor: pointer;
-    padding-left: 2px;
+}
+
+.notificationPanelContainer {
+    width: 100%;
+    border-spacing: 0px;
+}
+
+.notification {
+    border-bottom: 1px solid tabBorderColor;
+    padding-top: 4px;
+    margin-top: -1px;
+}
+
+.notificationIconWrapper {
+    display: inline-block;
+    width: 16px;
+    vertical-align: top;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.notificationIconWrapper svg {
+    width: 16px;
+    height: 16px;
+}
+
+.notificationIconWrapper svg[name="fail"] {
+    fill: notificationPopupIconFailFill;
+}
+
+.notificationIconWrapper svg[name="success"] {
+    fill: notificationPopupIconSuccessFill;
+}
+
+.notificationIconWrapper svg[name="progress"] {
+    fill: notificationPopupIconProgressFill;
+}
+
+.notificationContentWrapper{
+    display: inline-block;
+    width: literal("calc(100% - 75px)");
+    overflow: hidden;
+}
+
+.notificationTitleWrapper {
+}
+
+.notificationTitleWrapper > div {
+    font-family: mainFontFamily;
+    font-weight: bold;
+    color: mainFontColor;
+    white-space: pre-wrap;
+    margin-bottom: 0;
+    margin-top: 1px;
+    display: inline-block;
+}
+
+.notificationMessageWrapper {
+    overflow: hidden;
+}
+
+.notificationMessageWrapper > div {
+    margin-bottom: 4px;
+}
+
+.notificationTitleWrapper::after {
+    content: attr(info);
+    color: #aaaaaa;
+    font-size: 10px;
+    font-family: "Open Sans", sans-serif;
+    left: 20px;
+    margin-left: 5px;
+    opacity: 0;
+    -webkit-transition: all 0.5s cubic-bezier(0, .05, 0, 1);
+}
+
+.notificationTitleWrapper:hover:after {
+    opacity: 0.5;
+}
+
+.notificationCloseButtonWrapper {
+    display: inline-block;
+    float: right;
+    padding: 0px 7px 0px 7px;
+    vertical-align: top;
+    cursor: pointer;
+}
+
+.notificationCloseButtonWrapper svg g {
+    fill: minimizeIconColor;
+
+    -webkit-transition: color 0.1s ease-in-out,
+                        fill 0.1s ease-in-out,
+                        stroke 0.1s ease-in-out;
+    transition: color 0.1s ease-in-out,
+                fill 0.1s ease-in-out,
+                stroke 0.1s ease-in-out;
+}
+
+.notificationCloseButtonWrapper svg:hover g {
+    fill: minimizeIconHoverColor;
+}
+
+.notificationStatusProgress {
+    background-color: notificationPopupProgressBackground;
+}
+
+.notificationStatusSuccess {
+    background-color: notificationPopupSuccessBackground;
+}
+
+.notificationStatusFail {
+    background-color: notificationPopupFailBackground;
+}
+
+.notificationPopupPlaceholder {
+    position: absolute;
+    right: 10px;
+    top: 65px;
+    z-index: 1;
+    width: 400px;
+    vertical-align: top;
+}
+
+.notificationPopupPanel {
+    border-radius: 5px;
+    box-shadow: notificationPopupPanelShadow;
+    margin-bottom: 10px;
+    overflow: hidden;
 }
 
 .notificationPopup {
-    border-radius: 1px !important;
-    box-shadow: 0 2px 5px 0 rgba(50, 50, 50, 0.75);
-    font-size: secondaryTextFontSize;
-    color: buttonHoverTextColor;
-    vertical-align: middle;
+    width: 400px;
+    min-height: 55px;
 }
 
-.closePopupIcon {
-    fill: toolbarIconColor;
-    margin: auto;
-    width: 18px;
-    height: 18px;
-    opacity: 0.5;
-    padding: 10px;
+.notificationPopupContentWrapper {
+    display: inline-block;
+    max-width: 315px;
 }
 
-.closePopupIcon:hover {
-    opacity: 1;
+.notificationPopupIconWrapper {
+    display: inline-block;
+    vertical-align: top;
+    margin: 18px 18px 15px 18px;
 }
 
-.floatLeft {
-    float: left;
+.notificationPopupIconWrapper > svg > g,
+.notificationPopupIconWrapper > svg > rect,
+.notificationPopupIconWrapper > svg > path {
+    fill: activeTabIconColor;
 }
 
-.close {
+.notificationPopupCloseButtonWrapper {
+    display: inline-block;
+    vertical-align: top;
     float: right;
-    margin: auto;
-    width: 7px;
-    height: 7px;
-    opacity: 0.5;
-    padding: 5px 10px;
+    padding: 1px 7px 1px 7px;
+    cursor: pointer;
 }
 
-.close:hover {
-    opacity: 1;
+.notificationPopupCloseButtonWrapper > svg > g {
+    fill: minimizeIconColor;
+
+    -webkit-transition: color 0.1s ease-in-out,
+    fill 0.1s ease-in-out,
+    stroke 0.1s ease-in-out;
+    transition: color 0.1s ease-in-out,
+    fill 0.1s ease-in-out,
+    stroke 0.1s ease-in-out;
 }
 
-.margin4px {
-    margin: 4px;
+.notificationPopupCloseButtonWrapper > svg:hover > g {
+    fill: #2b6f5c;
 }
 
-.right25px {
-    margin-right: 25px !important;
+.notificationPopupTitleWrapper {
+    margin-top: 12px;
 }
 
-.error {
-    color: errorEventColor !important;
-    fill: errorEventColor !important;
-}
-
-.success {
-    fill: successEventColor;
-}
-
-.warning {
-    color: #cb772f !important;
-    fill: #cb772f;
-}
-
-.unread {
-    /*opacity: 0.7;*/
-}
-
-.countLabel {
-    float: left;
-    margin-top: 3px;
-    margin-left: 3px;
-    padding: 0px 3px;
-    color: tabBorderColor;
-    background-color: mainFontColor;
-    line-height: 11px;
-    vertical-align: middle;
+.notificationPopupTitleWrapper > div {
+    margin-bottom: 0px;
+    font-size: 13px;
+    font-family: mainFontFamily;
     font-weight: bold;
-    font-size: smallFontSize;
-    position: relative;
+    color: mainFontColor;
+    white-space: pre-wrap;
 }
 
-.notificationMessage > svg {
-    width: 20px;
-    height: 20px;
-    margin-top: 5px;
-    margin-right: 3px;
+.notificationPopupMessageWrapper {
+    margin-bottom: 12px;
 }
 
-.progress {
-    fill: progressColor;
+.notificationPopupMessageWrapper > div {
+    color: mainFontColor;
 }
