IDEX-3718: remove unused resources

--- a/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/cellview/cellTree.css
+++ b/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/cellview/cellTree.css
@@ -38,7 +38,7 @@
 }
 
 .cellTreeItemValue:focus {
-    outline: none; !important;
+    outline: none !important;
 }
 
 .cellTreeKeyboardSelectedItem{
