Setup correct selected class if node has background color

--- a/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/smartTree/TreeStyles.css
+++ b/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/smartTree/TreeStyles.css
@@ -69,11 +69,11 @@
 }
 
 .selected {
-    background-color: projectExplorerSelectedRowBackground;
+    background-color: projectExplorerSelectedRowBackground !important;
 }
 
 .hover {
-    background-color: projectExplorerHoverRowBackground;
+    background-color: projectExplorerHoverRowBackground !important;
 }
 
 .joint {
