IDEX-3841: Focus element handles key events only for the first created tree widget in DOM

--- a/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/smartTree/TreeStyles.css
+++ b/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/smartTree/TreeStyles.css
@@ -96,6 +96,12 @@
     display: inline-block;
     min-width: 100%;
     font-size: 0.85em;
+    outline: none;
+    overflow-y: auto;
+}
+
+.tree:focus {
+    outline: none;
 }
 
 .loading {
