--- a/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/window/Window.css
+++ b/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/window/Window.css
@@ -10,7 +10,7 @@
  *******************************************************************************/
 @def animationDuration 300ms;
 
-.popup, .glass {
+.popup {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -24,10 +24,6 @@
     -moz-user-select: text; /* Firefox all */
     -ms-user-select: text; /* IE 10+ */
     user-select: text;
-}
-
-.glass {
-    opacity: 0.0;
 }
 
 .glassVisible {
