--- a/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/toolbar/popup-menu.css
+++ b/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/toolbar/popup-menu.css
@@ -45,13 +45,26 @@
     vertical-align: middle;
 }
 
-.popupMenuDelimiter {
+.popupMenuDelimiter,
+.popupMenuTextDelimiter {
     cursor: default;
+}
+
+.popupMenuDelimiter {
     width: 100%;
     height: 1px;
     background-color: popupBorderColor;
-    border-top: 2px solid popupBkgColor;
-    border-bottom: 2px solid popupBkgColor;
+}
+
+.popupMenuTextDelimiter {
+    background: editorPanelBackgroundColor;
+}
+
+.popupMenuTextDelimiter > div {
+    display: inline-block;
+    line-height: 20px;
+    margin-left: 14px;
+    margin-bottom: 0;
 }
 
 .popupMenuCheckField,
