fix image viewer's bug

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/imageviewer/imageViewer.css
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/imageviewer/imageViewer.css
@@ -9,12 +9,11 @@
  *   Codenvy, S.A. - initial API and implementation
  *******************************************************************************/
 /* Annotated CSS for the Editor presenter. */
-
-
 @url background imageViewerBackground;
 
 .imageViewer {
-    margin: auto;
-    background-image: background;
     display: block;
+    margin: auto;
+    height: 40%;
+    background-image: background;
 }
